# ChangeLog for media-libs/mediastreamer
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.33 2011/01/01 20:36:35 hwoarang Exp $

  01 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  mediastreamer-2.6.0.ebuild:
  Stable on amd64 wrt bug #349258

  27 Dec 2010; Thomas Kahle <tomka@gentoo.org> mediastreamer-2.6.0.ebuild:
  x86 stable per bug 349258

  04 Dec 2010; Peter Volkov <pva@gentoo.org> mediastreamer-2.6.0.ebuild:
  Fix automagick dependency on pulseaudio, bug #347163, thank Markus Oehme for
  report.

*mediastreamer-2.6.0 (23 Jul 2010)

  23 Jul 2010; Peter Volkov <pva@gentoo.org> +mediastreamer-2.6.0.ebuild:
  Version bump.

  18 Jul 2010; <nixnut@gentoo.org> mediastreamer-2.3.0-r1.ebuild:
  ppc stable #317235

  10 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  mediastreamer-2.3.0-r1.ebuild:
  x86 stable wrt bug #317235

*mediastreamer-2.5.0 (07 Jun 2010)

  07 Jun 2010; Peter Volkov <pva@gentoo.org> -mediastreamer-2.2.4.ebuild,
  -mediastreamer-2.3.0.ebuild, -mediastreamer-2.4.0.ebuild,
  +mediastreamer-2.5.0.ebuild:
  Version bump. Drop old.

  21 May 2010; Peter Volkov <pva@gentoo.org> mediastreamer-2.4.0.ebuild:
  mediastreamer-2.4.0 requires ortp-0.16.2, bug 320751, thank Nikoli for
  report. Use nongnu mirrors.

*mediastreamer-2.4.0 (20 May 2010)

  20 May 2010; Peter Volkov <pva@gentoo.org> +mediastreamer-2.4.0.ebuild:
  Version bump.

  20 May 2010; Peter Volkov <pva@gentoo.org> mediastreamer-2.3.0-r1.ebuild:
  amd64 stable, bug 317235.

*mediastreamer-2.3.0-r1 (21 Mar 2010)

  21 Mar 2010; Fabian Groffen <grobian@gentoo.org>
  +mediastreamer-2.3.0-r1.ebuild:
  Revbump for Darwin (coreaudio) support, bump to EAPI=3 for Prefix support,
  marked ~ppc-macos and ~x86-macos, bug #310215

  23 Feb 2010; Joseph Jezak <josejx@gentoo.org> mediastreamer-2.3.0.ebuild:
  Marked ~ppc64.

*mediastreamer-2.3.0 (08 Feb 2010)
